sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value lenth
		for (i<-0 to lenth-2){
                             ^