sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var swapped = true
	while (swapped){
		for (i<-0 to lenth-2){
			if (!plusPetit(i,i+1)){
				echange(i,i+1)
			}
		}
	}
}
